[FIX] handle fix layout

--- a/client/src/components/cleanui/styles/css/utils.scss
+++ b/client/src/components/cleanui/styles/css/utils.scss
@@ -38,3 +38,7 @@
 [data-kit-theme="default"] .ant-form-item {
   margin-bottom: 4px !important;
 }
+
+[data-kit-theme="default"] .br-8 {
+  border-radius: 8px !important;
+}
