[FEA] handle working, done serve

--- a/client/src/components/cleanui/styles/css/utils.scss
+++ b/client/src/components/cleanui/styles/css/utils.scss
@@ -42,3 +42,9 @@
 [data-kit-theme="default"] .br-8 {
   border-radius: 8px !important;
 }
+
+[data-kit-theme="default"] .box-shadow-ant {
+  box-shadow: 0 0 20px #4796df;
+}
+
+
